# gupnp-igd

./: .gitignore  .gitlab-ci.yml  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gupnp-igd-1.0-uninstalled.pc.in  gupnp-igd-1.0.pc.in  gupnp-igd.doap  meson.build  meson_options.txt
doc/: .gitignore  Makefile.am  gupnp-igd-docs.sgml  gupnp-igd-docs.xml  gupnp-igd-sections.txt  gupnp-igd.types  meson.build
examples/: map-port.js
libgupnp-igd/: Makefile.am  gupnp-enum-types.c  gupnp-enum-types.h  gupnp-simple-igd-marshal.list  gupnp-simple-igd-priv.h  gupnp-simple-igd-thread.c  gupnp-simple-igd-thread.h  gupnp-simple-igd.c  gupnp-simple-igd.h  meson.build
python/: Makefile.am  pygupnp-igd-filters.defs  pygupnp-igd-module.c  pygupnp-igd.defs  pygupnp-igd.override  rebuild-defs.sh
subprojects/: .gitignore  gupnp-1.2.wrap  gupnp-1.6.wrap
tests/: Makefile.am  meson.build
tests/examples/: Makefile.am  meson.build  test-thread.c  test.c
tests/gtest/: InternetGatewayDevice.xml  Makefile.am  WANIPConnection.xml  WANPPPConnection.xml  gupnp-simple-igd.c  meson.build
